add some new files && modify some codes

--- a/core/public/test2.phtml
+++ b/core/public/test2.phtml
@@ -18,4 +18,14 @@ $sar_all = $sar_uni + $signal;
 // echo $sar_all.'<br>';
 // echo $sar_all - 192 - 100;
 $ss =null;
-echo ucwords('index');
+// echo ucwords('index');
+// $arr = array('2s'=> 's','3','5');
+// array_shift($arr);
+// print_r($arr);
+$sus = null;
+$sus += 2;
+$seconds = 6;
+$scale =5;
+// $res = floor($seconds/$scale);
+// echo $res;
+var_dump($_SERVER['REMOTE_ADDR']);
