--- a/core/public/test2.phtml
+++ b/core/public/test2.phtml
@@ -28,4 +28,15 @@ $seconds = 6;
 $scale =5;
 // $res = floor($seconds/$scale);
 // echo $res;
-var_dump($_SERVER['REMOTE_ADDR']);
+// var_dump($_SERVER['REMOTE_ADDR']);
+$par = 2;
+// function test(&$par) {
+//   $par = 1;
+// }
+// test($par);
+// echo $par;
+$us = '';
+if(isset($us))
+  echo '1';
+else
+  echo '2';
