--- a/core/public/index.phtml
+++ b/core/public/index.phtml
@@ -31,9 +31,9 @@ if(!defined('VERSION')) {
   <div id="carousel-index" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-index" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-index" data-slide-to="1"></li>
+    <li data-target="#carousel-index" data-slide-to="2"></li>
   </ol>
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
@@ -57,11 +57,11 @@ if(!defined('VERSION')) {
       </div>
     </div>
     <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <a class="left carousel-control" href="#carousel-index" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <a class="right carousel-control" href="#carousel-index" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -71,12 +71,14 @@ if(!defined('VERSION')) {
       <div class="col-lg-4">
 
       </div>
-      <div class="col-lg-4">
-        <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="140" width="140">
-        <h2>My Blog</h2>
-        <p>my blog with wordpress</p>
-        <p><a class="btn btn-default" href="/wordpress/" role="button">View details »</a></p>
-      </div>
+      <a class="" href="<?php 
+      #echo '/?action=ext&cat=wordpress';
+      echo '/wordpress'; # ?>">
+        <div class="col-lg-4 col-link-item">
+          <h2>My Blog</h2>
+          <p>my blog with wordpress</p>
+        </div>
+      </a>
       <div class="col-lg-4">
 
       </div>
