--- a/core/public/header.phtml
+++ b/core/public/header.phtml
@@ -5,7 +5,7 @@ if(!defined('VERSION')) {
 }
 // require_once CORE_PATH.'const.php';
 ?>
-<div class="header">
+<div id="header">
   <div class="z_top">
     <div class="head-mask top">
       
