--- a/core/public/index.phtml
+++ b/core/public/index.phtml
@@ -40,19 +40,19 @@ if(!defined('VERSION')) {
       <div class="item active">
         <img src="/static/img/sword_art_online_4.jpg" alt="图片1">
         <div class="carousel-caption">
-          这只是一组烧流量的图片
+          sword_art_online
         </div>
       </div>
       <div class="item">
         <img src="/static/img/sword_art_online_2.jpg" alt="图片2">
         <div class="carousel-caption">
-          这只是一组烧流量的图片
+          sword_art_online
         </div>
       </div>
       <div class="item">
         <img src="/static/img/sword_art_online_3.jpg" alt="图片3">
         <div class="carousel-caption">
-          这只是一组烧流量的图片
+          sword_art_online
         </div>
       </div>
     </div>
@@ -66,21 +66,40 @@ if(!defined('VERSION')) {
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div class="container marketing">
+  <div class="container-fluid marketing">
     <div class="row">
-      <div class="col-lg-4">
-
+      <div class="col-lg-3 col-sm-4 col-xs-8 col-xs-offset-2 col-link-item">
+        <a class="" href="<?php 
+          #echo '/?action=ext&cat=wordpress';
+          echo '//blog.sunsmell.cc/'; # ?>">
+          <div class="">  
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-thumbnail">
+            <h2>My Blog</h2>
+            <p>my blog powered by wordpress</p>
+          </div>
+        </a>
       </div>
-      <a class="" href="<?php 
-      #echo '/?action=ext&cat=wordpress';
-      echo '/wordpress'; # ?>">
-        <div class="col-lg-4 col-link-item">
-          <h2>My Blog</h2>
-          <p>my blog with wordpress</p>
-        </div>
-      </a>
-      <div class="col-lg-4">
-
+      <div class="col-lg-3 col-sm-4 col-xs-8 col-xs-offset-2 col-link-item ">
+        <a class="" href="<?php 
+          #echo '/?action=ext&cat=wordpress';
+          echo '//blog.sunsmell.cc/'; # ?>">
+          <div class="">  
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-thumbnail">
+            <h2>My Blog</h2>
+            <p>my blog powered by wordpress</p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-3 col-sm-4 col-xs-8 col-xs-offset-2 col-link-item ">
+        <a class="" href="<?php 
+          #echo '/?action=ext&cat=wordpress';
+          echo '//blog.sunsmell.cc/'; # ?>">
+          <div class="">  
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" class="img-thumbnail">
+            <h2>My Blog</h2>
+            <p>my blog powered by wordpress</p>
+          </div>
+        </a>
       </div>
     </div>
     <?php if(DEBUG_MODE):?>
