--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -1,28 +1,12 @@
-@media (min-width: @screen-lg-min) {
-  div.header {
-    min-width: 1170px;
-  }
-}
-@media (min-width: @screen-md-min) {
-  div.header {
-    min-width: 950px;
-  }
-}
-@media (min-width: @screen-sm-min) {
-  div.header {
-    min-width: 600px;
-  }
-}
-div.header {
+#header {
   z-index: 100;
   min-width: 400px;
-  height: 160px;
+  height: 70px;
   background: url('/static/img/header-bg2.jpg') repeat ;
-
+  position: relative;
 }
+
 div.head-mask {
-  /*background-attachment: fixed;
-  background-color: rgba(255,255,255,0.3);*/
   background: inherit;
   position: absolute;
   width: 100%;
@@ -31,14 +15,15 @@ div.head-mask {
   -webkit-filter: blur(6px);
   -ms-filter: blur(6px);
 }
+
 .z_top {
   /*box-shadow: rgba(0,0,0,0.1) 0 2px 1px;*/
   position: relative;
   z-index: 100;
   width: inherit;
   background: inherit; ;
-
 }
+
 .top {
   height: 72px;
   box-shadow: rgba(15,15,15,0.3) 0 2px 1px;
@@ -53,11 +38,13 @@ div.head-mask {
   z-index: 1000;
   position: relative;
 }
+
 .logo img{
   vertical-align: middle;
 }
+
 .title {
-  font-size: 22px;
+  font-size: 15px;
   font-style: oblique;
   color: rgb(255,250,250);
   text-align: bottom;
@@ -74,17 +61,39 @@ div.head-mask {
 }
 
 
-div#footer {
+#footer {
   bottom: -40px;
   width: 100%;
   background-color: rgb(240,240,240);
   padding: 15px 0 15px;
 }
-div#footer div.thx p{
+#footer div.thx p{
   margin-left: 10px;
   font-size: 70%;
 }
-div#footer div.thx img{
+#footer div.thx img{
   max-height: 60px;
   max-width: 100px;
+}
+
+@media (min-width: 768px) {
+  #header {
+    min-width: 600px;
+    height: 85px;
+  }
+}
+@media screen and (min-width: 992px) {
+  #header {
+    min-width: 950px;
+    height: 100px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  #header {
+    min-width: 1170px;
+    height: 115px;
+  }
+  .title {
+    font-size: 22px;
+  }
 }
