--- a/core/public/test2.phtml
+++ b/core/public/test2.phtml
@@ -1,42 +1,47 @@
-<?php 
-// echo isset($_SESSION['security']) ? $_SESSION['security'] : 'not set';
-// print_r($_SESSION['test']);
-// eval('print_r(hello)');
-// echo is_null(null) ? 'set' : 'not';
-$DFF = 20;
-$switch = 12;
-
-$nand = 4;
-$nor = 4;
-$or = 6;
-$inverse = 2;
-$sar_part = $DFF + 2 * $switch;
-$sar_uni = $sar_part * 12 + 10 * $or;
-
-$signal = 5 * $DFF + $inverse * 2 + $nand * 2 + $nor + $or;
-$sar_all = $sar_uni + $signal;
-// echo $sar_all.'<br>';
-// echo $sar_all - 192 - 100;
-$ss =null;
-// echo ucwords('index');
-// $arr = array('2s'=> 's','3','5');
-// array_shift($arr);
-// print_r($arr);
-$sus = null;
-$sus += 2;
-$seconds = 6;
-$scale =5;
-// $res = floor($seconds/$scale);
-// echo $res;
-// var_dump($_SERVER['REMOTE_ADDR']);
-$par = 2;
-// function test(&$par) {
-//   $par = 1;
-// }
-// test($par);
-// echo $par;
-$us = '';
-if(isset($us))
-  echo '1';
-else
-  echo '2';
+<!DOCTYPE html>
+<html lang="zh-CN" PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
+<head>
+  <meta  charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1, user-scalable=0">
+  <meta http-equiv="Content-Type" content="text/html;" />
+  <meta name="description" content="主页" />
+  <meta name="renderer" content="webkit">
+  <title>sunsmell主页</title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <!-- jQuery文件-->
+  <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+  <!-- 新 Bootstrap 核心 CSS 文件 -->
+  <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+  <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="row">
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+</div>
+<div class="row">
+  <div class="col-md-8">.col-md-8</div>
+  <div class="col-md-4">.col-md-4</div>
+</div>
+<div class="row">
+  <div class="col-md-4">.col-md-4</div>
+  <div class="col-md-4">.col-md-4</div>
+  <div class="col-md-4">.col-md-4</div>
+</div>
+<div class="row">
+  <div class="col-md-6">.col-md-6</div>
+  <div class="col-md-6">.col-md-6</div>
+</div>
+</body>
