--- a/core/public/header.phtml
+++ b/core/public/header.phtml
@@ -14,17 +14,22 @@ if(!defined('VERSION')) {
       <div class="navbar-header">
         <a class="logo" href="/"><img src="<?php echo $this->view['logo']; ?>" alt="SunSmell" /></a>
       </div>
-      <!-- <span class="title" >个人主页</span> -->
-      <div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
-        <div class="navbar-right">
-          <div class="btn-group navbar-btn-group btn-group-lg" role="group">
-            <button type="button" class="btn btn-primary" disabled="disabled">button1</button>
-            <button type="button" class="btn btn-primary" disabled="disabled">button2</button>
+      <div class="hidden-xs">
+        <div id="navbar" class="navbar-collapse" aria-expanded="false">
+        <!-- <span class="title" >个人主页</span> -->
+          <div class="navbar-right">
+            <div class="btn-group navbar-btn-group btn-group-lg" role="group">
+              <button type="button" class="btn btn-primary" disabled="disabled"><?php echo $this->view['login'] ?></button>
+              <button type="button" class="btn btn-primary" disabled="disabled"><?php echo $this->view['reg']?></button>
+            </div>
           </div>
+          <a href="#" class="navbar-right">
+            <img class="img-circle avatar" src="<?php echo $this->view['avatar']; ?>" alt="avatar">
+          </a>
         </div>
-        <a href="#" class="navbar-right">
-          <img class="img-circle avatar" src="<?php echo $this->view['avatar']; ?>" alt="avatar">
-        </a>
+      </div>
+      <div class="visible-xs">
+        
       </div>
     </div>
   </div>
