--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,9 @@
-html{
-}
-
-
 #carousel-index {
   margin-bottom: 20px;
 }
 
 .marketing h2 {
-  font-weight: normal;
+  font-weight: auto;
 }
 
 .row a{
