将col-md-* col-xs-* 分开 因为col-xs-offset会应用到col-md中

--- a/css/index.css
+++ b/css/index.css
@@ -39,14 +39,18 @@
     width: 120px;
     height: 120px;
   }
+  .row {
+    margin-left: auto;
+  }
 }
 
-/*very large*/
+/*very large 
+do not consider now*/
 @media (min-width: 1200px) {
-  #carousel-index {
+  /*#carousel-index {
     margin-bottom: 80px;
   }
   .carousel-inner.active {
     margin-left: auto;
-  }
+  }*/
 }
