--- a/core/public/index.phtml
+++ b/core/public/index.phtml
@@ -34,13 +34,13 @@ if(!defined('VERSION')) {
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#carousel-index" data-slide-to="0" class="active"></li>
-      <!-- <li data-target="#carousel-index" data-slide-to="1"></li>
-      <li data-target="#carousel-index" data-slide-to="2"></li> -->
+      <li data-target="#carousel-index" data-slide-to="1"></li>
+      <li data-target="#carousel-index" data-slide-to="2"></li>
     </ol>
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <?php foreach ($this->view['carousel-item'] as $item) : ?>
-      <div class="item <?php if(isset($item['active']) && $item['active'] == 1) echo 'active'; ?>">
+      <div class="item <?php if(isset($item['active']) && $item['active']) echo 'active'; ?>">
         <img src="<?php echo $item['src'] ?>" alt="图片1">
         <div class="carousel-caption">
           <?php echo $item['description'] ?>
@@ -61,7 +61,18 @@ if(!defined('VERSION')) {
   <div class="container-fluid marketing">
     <div class="row">
       <?php  foreach($this->view['block'] as $block): ?>
-      <div class="col-sm-4 col-xs-6 col-xs-offset-3 col-link-item ">
+      <div class="col-xs-6 col-xs-offset-3 col-link-item visible-xs-block">
+      <!-- vertical arrangement -->
+        <a class="" href="<?php echo $block['href'];?>">
+          <div class="">  
+            <img src="<?php echo $block['img']; ?>" class="img-thumbnail">
+            <h2><?php echo $block['title']; ?></h2>
+            <p><?php echo $block['description']; ?></p>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-link-item hidden-xs">
+      <!-- horizontal arrangemet first and remains vertical -->
         <a class="" href="<?php echo $block['href'];?>">
           <div class="">  
             <img src="<?php echo $block['img']; ?>" class="img-thumbnail">
