函数名更改

--- a/core/public/index.phtml
+++ b/core/public/index.phtml
@@ -71,7 +71,7 @@ if(!defined('VERSION')) {
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-link-item hidden-xs">
+      <div class="col-sm-3 col-link-item hidden-xs">
       <!-- horizontal arrangemet first and remains vertical -->
         <a class="" href="<?php echo $block['href'];?>">
           <div class="">  
