update core code

--- a/core/public/test.phtml
+++ b/core/public/test.phtml
@@ -3,58 +3,5 @@
     header('Location:/');
     exit();
   }
-  $_SESSION['security'] = 'can you require_once';
-  $GLOBALS['security'] = 'can you require_once';
-  // require_once CORE_PATH.'db/Db.class.php';
-  require CORE_PATH.'const.php';
-  require_once CORE_PATH.'Security.class.php';
-  $security = new Security;
-  $random_code = $security->set_secure_value($GLOVARS['sendmail']);
-?>
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta  charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="Content-Type" content="text/html;" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="/css/header-footer.css" />
-  <!-- jQuery文件-->
-  <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-  <!-- 新 Bootstrap 核心 CSS 文件 -->
-  <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-  <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</head>
-<body>
-  <?php require $URLS['body-header']; ?> 
-  <div class="container">
-    <form method="post" action="<?php  echo 'index.php?action=utils&util=mail'; ?>">
-      <div class="form-group">
-        <label for="inputEmail" class="col-md-2 control-label"><p class="text-center">收信人地址</p></label>
-        <div class="input-group col-md-10">
-          <input type="email" class="form-control" id="inputEmail1" name="emailto" placeholder="Email">
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="inputSubject" class="col-md-2 control-label"><p class="text-center">主题</p></label>
-        <div class="input-group col-md-10">
-          <input type="text" class="form-control" name="subject" id="inputSubject"  placeholder="Subject">
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="inputBody" class="col-md-2 control-label"><p class="text-center">内容</p></label>
-      </div>
-        <textarea class="form-control col-md-10" rows="5" id="inputBody" name="body"></textarea>
-      <div class="form-group">
-        <div class="col-md-5"></div>
-        <div class="col-md-2">
-          <button type="submit" class="btn btn-primary btn-block">发送</button>
-          <input class="sr-only" name="random_code" value="<?php echo $random_code; ?>">
-        </div>
-      </div>
-    </form>
-  </div>
-  <?php require $URLS['body-footer'] ?>
-</body>
-</html>
+$options = new DbOptions();
+$options->get_all_options();
