--- a/include/view/test.phtml
+++ b/include/view/test.phtml
@@ -3,9 +3,10 @@
     header('Location:/');
     exit();
   }
-// $options = new DbOptions();
+$options = new DbOptions();
 
-// print_r($options->get_all_options());
-$column_from = 'st,12,32';
-$periodpos = strpos($column_from, ',');
-echo substr($column_from, $periodpos+1);
+print_r($options->get_all_options());
+echo '<br>';
+// print_r($options->get_option('test2'));
+$options->update('test2','ss','n');
+print_r($options->get_all_options());
