--- a/include/view/testjsgame.phtml
+++ b/include/view/testjsgame.phtml
@@ -16,7 +16,8 @@ if(!defined('VERSION')) {
   <title><?php echo $this->view['title'] ?></title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <!-- jQuery文件-->
-  <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+  <!-- <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script> -->
+  <script type="text/javascript" src="/js/jquery-1.12.1.min.js"></script>
   <!-- 新 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
@@ -24,13 +25,14 @@ if(!defined('VERSION')) {
   <link rel="stylesheet" type="text/css" href="/css/header-footer.css" />
   <link rel="stylesheet" type="text/css" href="/css/index.css" />
   <script type="text/javascript" src="/js/index.js"></script>
+  <script type="text/javascript" src="/js/test.js"></script>
 </head>
 <body>
   <?php include $this->view['header']; ?>
-  <div class="container">
+  <div class="container" id="container">
     <h1> JS </h1>
-    <div>
-      
+    <div id="field">
+      <p id="test"></p>
     </div>
   </div>
   <?php include $this->view['footer']; ?> 
