--- a/include/view/err.phtml
+++ b/include/view/err.phtml
@@ -20,7 +20,7 @@ if(!defined('VERSION'))
   <link rel="stylesheet" type="text/css" href="/css/header-footer.css" />
   <link rel="stylesheet" type="text/css" href="/css/err.css" />
   <title>
-    <?php  $this->err_title_output($this->view['errcode']); ?>  
+    <?php  $this->err_title_output(); ?>  
   </title>
 </head>
 <body>
